refactor: configs now also serialize superclasses fields